--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -11,13 +11,28 @@
     <form action="" method="post">
         <fieldset>
             <label for="username">Username</label>
-            <input type="text" id="username" name="username" placeholder="username">
+            <input 
+                type="text" id="username" name="username" 
+                placeholder="username"
+                value=<%= username %>
+            >
         </fieldset>
         <fieldset>
             <label for="password">Password</label>
-            <input type="password" name="password" id="password">
+            <input 
+                type="password" name="password" id="password"
+                value=<%= password %>
+            >
         </fieldset>
         <button type="submit">Sign Up</button>
     </form>
+    <% if(errors) { %>
+        <h2>List of existing errors: </h2>
+        <ul>
+            <% errors.forEach(error => { %>
+                <li><%= error.msg %></li>
+            <% }) %>
+        </ul>
+    <% } %>
 </body>
 </html>
