--- a/views/login-form.ejs
+++ b/views/login-form.ejs
@@ -7,11 +7,11 @@
     <form action="" method="post">
         <fieldset>
             <label for="username">Email Address: </label>
-            <input type="email" name="username" id="username">
+            <input type="email" name="username" id="username" autocomplete="username" placeholder="username">
         </fieldset>
         <fieldset>
             <label for="password">Password: </label>
-            <input type="password" id="password" name="password">
+            <input type="password" id="password" name="password" autocomplete="current-password" placeholder="password">
         </fieldset>
         <button type="submit">Login</button>
     </form>
