--- a/views/club-member.ejs
+++ b/views/club-member.ejs
@@ -3,6 +3,7 @@
     <%- include("./partials/head.ejs") %>
 <body>
     <div class="container">
+        <%- include("./partials/navs.ejs") %>
         <h1><%= title %></h1>
         <%- include("./partials/errors.ejs") %>
         <form action="" method="post">
