--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include("./partials/head.ejs") %>
-<body>
-    <h1><%= title %></h1>
+<body>    
     <div class="container">
+        <%- include("./partials/navs.ejs") %>
+        <h1><%= title %></h1>
         <% users?.forEach(user => { %>
-            <% if(user?.messages.length) { %>
+            <% if(user?.messages?.length) { %>
                 <% user?.messages.forEach(msg => { %>
                     <div class="msg-wrapper">
                         <div class="top">
