--- a/views/login-form.ejs
+++ b/views/login-form.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include("./partials/head.ejs") %>
 <body>
+    <%- include("./partials/navs.ejs") %>
     <h1><%= title %></h1>
     <%- include("./partials/errors.ejs") %>
     <form action="" method="post">
