--- a/views/msg-board.ejs
+++ b/views/msg-board.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include("./partials/head.ejs") %>
 <body>
+    <%- include("./partials/navs.ejs") %>
     <h1><%= title %></h1>
     <p>you made it to message board</p>
     <% if(createMsg) { %>
