--- a/views/new-msg.ejs
+++ b/views/new-msg.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include("./partials/head.ejs") %>
 <body>
+    <%- include("./partials/navs.ejs") %>
     <h1><%= title %></h1>
     <form action="" method="post">
         <fieldset>
